# balotilo

./: README.md  candidatures.csv  candidatures_cleaned.csv  make_email_lists.py  pyproject.toml  simplify_candidatures.py  sort_lists.py
balotilo/: main.py
elections/: config.yaml
elections/13/: candidates.yaml  voters.txt
