[project]
name = "balotilo"
version = "0.1.0"
description = "Python scripts to automatize action on Balotilo (like creating a big amount of elections, or updating them or deleting them etc...)"
authors = [
    {name = "Dan Ringwald",email = "dan.ringwald12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
packages = [{ include = "optidock"}]
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
